# guitar_hero

./: .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  pyproject.toml  render.yaml
fretboard/: __init__.py  engine.py  main.py  renderer.py  songs.py
tests/: test_engine.py  test_engine_extra.py  test_high_scores.py  test_song_helpers.py  test_songs.py
web/: index.html
