[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fretboard"
version = "1.0.0"
description = "A terminal-based Guitar Hero style rhythm game"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

[project.scripts]
fretboard = "fretboard.main:main"

[tool.setuptools.packages.find]
include = ["fretboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
